[package]
name = "sysy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master" , features = ["llvm13-0"]}
thiserror = "1.0"
miette = { version = "4.3", features = ["fancy"] }
tree-sitter = "0.20.6"
tree-sitter-sysy = {path = "./tree-sitter-sysy"}
colored = "2"
itertools = "*"
