[package]
name = "sysy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sysy"
path = "src/main.rs"

[lib]
name = "sysy"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
[dependencies]
clap = { version = "3.2", features = ["derive"] }
inkwell = { version = "0.1.0-beta.4", features = ["llvm13-0"]}
thiserror = "1.0"
miette = { version = "5.1", features = ["fancy"] }
tree-sitter = "0.20.6"
tree-sitter-sysy = {path = "./tree-sitter-sysy"}
colored = "2"
itertools = "*"
phf = { version = "0.10", features = ["macros"] }
lexical = "6.1.1"
parse_int = { version = "0.6.0", features = ["implicit-octal"] }
libtest-mimic = "0.4"
[[test]]
name = "sysy-tests"
harness = false
