[package]
name = "tree-sitter-sysy"
description = "SysY grammar for the tree-sitter parsing library"
version = "0.20.1"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>", "mgt <mgt@oi-wiki.org>"]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "c"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Enter-tainer/tree-sitter-sysy"
edition = "2018"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"
